[workspace]
resolver = "2"
members = [
    "auth","example",
]

[workspace.dependencies]
lambda_runtime = "0.11.2"
tokio = { version = "1", features = ["full"] }
validator = "0.18.1"
thiserror = "1.0.61"
postgrest = "1.0"
aws-sdk-s3 = "1.34.0"
async-trait = "0.1.80"
aws-config = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
chrono = "0.4"

