[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
postgrest.workspace = true
thiserror.workspace = true
async-trait.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
